chore: reduce Docker image size